--- a/articles.html
+++ b/articles.html
@@ -20,6 +20,13 @@
     <main>
         <!-- Articles Page Content -->
         <div class="article-preview">
+            <h3>Understanding object lifetimes in C++</h3>
+            <div class="article-meta">posted: 24.03.2025</div>
+            <p>A brief article on object lifetimes in C++ and why they're important</p>
+            <a href="/articles/start-lifetime-as.html" class="read-more">Read Post</a>
+        </div>
+
+        <div class="article-preview">
             <h3>Performance-oriented C++ attributes</h3>
             <div class="article-meta">posted: 20.01.2025</div>
             <p>A short reference post with some interesting and useful attributes for performance optimisation available in modern C++.</p>
