--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
     <main>
         <h2>Recent articles</h2>
         <div class="article-preview">
+            <h3>Understanding object lifetimes in C++</h3>
+            <div class="article-meta">posted: 24.03.2025</div>
+            <p>A brief article on object lifetimes in C++ and why they're important</p>
+            <a href="/articles/start-lifetime-as.html" class="read-more">Read Post</a>
+        </div>
+        <div class="article-preview">
             <h3>Interesting compiler attributes in modern C++</h3>
             <div class="article-meta">posted: 20.01.2025</div>
             <p>A short reference post with some interesting and useful attributes available in modern C++.</p>
@@ -33,12 +39,7 @@
             <a href="/articles/pattern-matching-cpp.html" class="read-more">Read Post</a>
         </div>
 
-        <div class="article-preview">
-            <h3>Performance comparison between virtual calls and static dispatch</h3>
-            <div class="article-meta">posted: 10.04.2022</div>
-            <p>A brief summary of static dispatch in C++ and how it compares with virtual functions.</p>
-            <a href="/articles/comparison-virtual-static.html" class="read-more">Read Post</a>
-        </div>
+        <p><a href="/articles.html">All articles</a></p>
 
         <br>
         <!-- About Page Content -->
