--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
                 <h3 class="timeline-title">Software Engineer</h3>
                 <div class="timeline-company">OxFORD Asset Management</div>
                 <div class="timeline-description">
-                    Working on trading systems using C++ and Python.
+                    Front-office execution and trading systems (C++/Python)
                 </div>
             </div>
 
@@ -41,7 +41,7 @@
                 <h3 class="timeline-title">Software Engineer Intern</h3>
                 <div class="timeline-company">Bloomberg</div>
                 <div class="timeline-description">
-                    Modernised reference data parsers for several EMEA stock exchanges using C++.
+                    Real-Time Market Data Feeds (C++)
                 </div>
             </div>
 
@@ -50,7 +50,7 @@
                 <h3 class="timeline-title">Software Engineer Intern</h3>
                 <div class="timeline-company">Bloomberg</div>
                 <div class="timeline-description">
-                    Learned about order books and testing them using behaviour-driven development in Python.
+                    Emerging Markets (Python)
                 </div>
             </div>
 
@@ -65,8 +65,8 @@
         </div>
 
         <div class="social-links">
-            <a href="https://github.com/yourusername">GitHub</a>
-            <a href="https://linkedin.com/in/yourusername">LinkedIn</a>
+            <a href="https://github.com/thealexcons">GitHub</a>
+            <a href="https://linkedin.com/in/alexconstantin-gomez">LinkedIn</a>
         </div>
     </main>
 
